# rudget

./: .env  Cargo.toml
migrations/2021-08-08-200914_0.1.0/: down.sql  up.sql
src/: db.rs  error.rs  main.rs  schema.rs
src/models/: users.rs
src/routes/: users.rs
